# pasted-ir-telegram-bot

./: .gitignore  README.md  example.config.env  main.py  pyproject.toml  start_bot.sh
nginx/: example.default.conf  example.nginx.conf
