[project]
name = "pasted-telegram-bot"
version = "1.0.0"
description = "A Telegram bot that automatically detects long text or code messages and creates pastes"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-telegram-bot==20.7",
    "requests==2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.uv.scripts]
start = "python main.py"
test = "pytest"
format = "black ."
lint = "flake8 ." 